/***********************************************************************
X3 ChangeLog

2007-06-08  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/mod-webtv.c: Added JOIN and PART.

	* src/mod-webtv.help: Added JOIN and PART.

2007-06-08  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/mod-webtv.c: Added NICK and WHOIS commands. As well as 2 x3.conf
	config options, required_mark and valid_marks.

	* src/mod-webtv.help: Added INDEX, NICK, and WHOIS.

2007-06-08  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* configure: Run autogen.sh.

	* configure.in: Tweaks for google core dumper 1.1.

	* x3.conf.example: Basic webtv module section.

	* src/config.h.in: Run autogen.sh.

	* src/Makefile.am: Run autogen.sh.

	* src/Makefile.in: Run autogen.sh.

	* src/mod-webtv.c: Basic module for now. (Does nothing so dont
	bother compiling in).

	* src/mod-webtv.help: Empty help file for webtv module.

	* tools/core_install.sh: Update google core dumper to 1.1.

	* tools/coredumper.tar.gz: Update google core dumper to 1.1.

2007-06-06  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: Quick fix (as its 12:11am and i have work at 8:30am).
	This will stop the "Unable to find user irc.servername.com whose mark 
	is changing." messages. When a user reconnects and an existing exempt
	is on the network for the user, their lastseen time is sent out to
	all the servers. This quick fix moves the user checking part to
	the relevant part of the function that actually uses users.

2007-05-04  Alex Schumann  <rubin@afternet.org>

        * src/chanserv.c: fixed problem with giveownership logs where the
	previous owners handle could reference a free'd string.

2007-04-24  Alex Schumann  <rubin@afternet.org>

        * src/nickserv.c: add missing ifdef for inldap search.

2007-04-22  Alex Schumann  <rubin@afternet.org>

        * src/nickserv.c: change authserv search accountmask to just account.
	added inldap search criteria. added add2ldap search target.
